fix delete account bug, add amount of votes, hide scrollbar

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -13,3 +13,12 @@ html, body, #root {
     padding: 0;
     font-size: 14px;
 }
+
+*::-webkit-scrollbar {
+    display: none;
+}
+
+* {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
